vX.X (XXXX-XX-XX)
=================
  * placeholder for next version's changelog

v1.2 (2016-09-10)
=================
  * Changed: big rework of logging handling. Now done through I/O-redirection of file descriptors 1 to 5.
  * Fix: Add case for s-nail when using mailx.
  * Fix: Always exclude /proc from Source Disk Use Information.
  * Fix issue #140: Add --no-show-photos to --gpg-options.
  * Fix "line 89: 4: Bad file descriptor" when printing usage without config set up.

v1.1 (2016-09-03)
===================
  * Fix and improve handling of INCLIST and EXCLIST (issue #128)
  * Fix shellcheck error SC2166
  * Fix shellcheck error SC2128
  * Fix shellcheck SC2153 and SC1090
  * Restart versionning and keeping a changelog
  * Add option "--version" or "-V" to show version information about this script and duplicity

0.9.x (2013-01-14 to 2016-08-31)
================================
Versionning and keeping a changelog up to date has been neglected between 2013-01-14 and 2016-08-31.

There were no official 0.9.x release, but an automatically generated list of changes that affected
`duplicity-backup.sh` or `duplicity-backup.conf.example` is available in the file `CHANGELOG_0.9.x.md`.

0.8.3 (02 January 2013)
======================
  * FreeBSD portability (du, mail, & shebang) [barofsoap]
  * Fix issue #30 "-s (collection-status) option not writing anything to log file"

0.8.2 (01 November 2012)
========================
  * Handle --time option for restoration and file-listing
  * Fix "check_variables" not to throw errors if no encryption is desired
  * Added mail option [philcryer]
  * Fix issue #18: `which s3cmd` only called when dest is s3
  * Added hint in the comments of the config file to use --s3-european-buckets option for european buckets

0.8.1 (15 August 2012)
======================
  * Added support for using separate signature and encryption keys [puredoze]
  * Adaptation of the script's self-backup process resulting from puredoze's enhancement
